--- a/ECE590CN.ipynb
+++ b/ECE590CN.ipynb
@@ -628,11 +628,7 @@
         "\n",
         "dyn_GS2 = np.zeros((100,3))\n",
         "dyn_GS2[:, 0] = np.array([R_earth * np.cos(math.radians(45))])\n",
-        "dyn_GS2[:, 2] = np.array([R_earth * np.sin(math.radians(45))])\n",
-        "\n",
-        "# dyn_GEO1 = np.zeros((100,3))\n",
-        "# geo_sat_1 = {'x': R_earth + geo_altitude, 'y': 0, 'z': 0}\n",
-        "# dyn_LEO2, dur2= durationVisibility(1, 3)"
+        "dyn_GS2[:, 2] = np.array([R_earth * np.sin(math.radians(45))])"
       ]
     },
     {
